--- a/welcome.html
+++ b/welcome.html
@@ -9,5 +9,7 @@
 				<h4>@@@@@@@@@@@@@@</h4>
 				<h5>##############</h5>
 				<h6>$$$$$$$$$$$$$$</h6>
+				<h6>uuuuuuuuuuuuuu</h6>
+				<h6>rrrrrrrrrrrrrr</h6>
 	</body>
 	</html>
